<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dip"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <!--BLE Status-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_ble_status"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/id_ble_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <!--Device Operations-->
        <LinearLayout
            android:layout_marginTop="20dip"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_operation_group"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/id_ble_scan_btn"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/gray_border"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/label_operation_scan"
                        android:layout_height="wrap_content">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/id_power_off_btn"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/gray_border"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/label_operation_poweroff"
                        android:layout_height="wrap_content">
                    </TextView>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!--Device Firm Version-->
        <LinearLayout
            android:layout_marginTop="20dip"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_firm_version"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/id_firm_version_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <!--Device Serial No-->
        <LinearLayout
            android:layout_marginTop="20dip"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_serial_no"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/id_serial_no_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <!--Power Percent-->
        <LinearLayout
            android:layout_marginTop="20dip"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_power_percent"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/id_power_percent_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <!--Atomization Rate-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dip"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/label_atomization_rate"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="2"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/id_atomi_high_btn"
                    android:layout_width="0dip"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/gray_border"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/label_atomization_rate_high"
                        android:layout_height="wrap_content">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/id_atomi_middle_btn"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/gray_border"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/label_atomization_rate_middle"
                        android:layout_height="wrap_content">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/id_atomi_low_btn"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/gray_border"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/label_atomization_rate_low"
                        android:layout_height="wrap_content">
                    </TextView>

                </LinearLayout>

            </LinearLayout>




        </LinearLayout>


        <!--Breath Detection Log-->
        <LinearLayout
            android:layout_marginTop="20dip"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_device_list"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dip">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/id_breath_detect_log_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>